[BL-218] Paging for (POST) /products/images
