# swagger_server/models/get_objects_by_product_id_response.py
@@ -1,0 +1,91 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from swagger_server.models.get_objects_by_product_id_response_data import GetObjectsByProductIdResponseData
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class GetObjectsByProductIdResponse(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, message: str=None, data: GetObjectsByProductIdResponseData=None):
+        """
+        GetObjectsByProductIdResponse - a model defined in Swagger
+
+        :param message: The message of this GetObjectsByProductIdResponse.
+        :type message: str
+        :param data: The data of this GetObjectsByProductIdResponse.
+        :type data: GetObjectsByProductIdResponseData
+        """
+        self.swagger_types = {
+            'message': str,
+            'data': GetObjectsByProductIdResponseData
+        }
+
+        self.attribute_map = {
+            'message': 'message',
+            'data': 'data'
+        }
+
+        self._message = message
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GetObjectsByProductIdResponse':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The GetObjectsByProductIdResponse of this GetObjectsByProductIdResponse.
+        :rtype: GetObjectsByProductIdResponse
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def message(self) -> str:
+        """
+        Gets the message of this GetObjectsByProductIdResponse.
+
+        :return: The message of this GetObjectsByProductIdResponse.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: str):
+        """
+        Sets the message of this GetObjectsByProductIdResponse.
+
+        :param message: The message of this GetObjectsByProductIdResponse.
+        :type message: str
+        """
+
+        self._message = message
+
+    @property
+    def data(self) -> GetObjectsByProductIdResponseData:
+        """
+        Gets the data of this GetObjectsByProductIdResponse.
+
+        :return: The data of this GetObjectsByProductIdResponse.
+        :rtype: GetObjectsByProductIdResponseData
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: GetObjectsByProductIdResponseData):
+        """
+        Sets the data of this GetObjectsByProductIdResponse.
+
+        :param data: The data of this GetObjectsByProductIdResponse.
+        :type data: GetObjectsByProductIdResponseData
+        """
+
+        self._data = data
+
