# swagger_server/models/get_objects_by_product_id_response_data.py
@@ -1,0 +1,91 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from swagger_server.models.boxes_array import BoxesArray
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class GetObjectsByProductIdResponseData(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, boxes: BoxesArray=None, product_id: str=None):
+        """
+        GetObjectsByProductIdResponseData - a model defined in Swagger
+
+        :param boxes: The boxes of this GetObjectsByProductIdResponseData.
+        :type boxes: BoxesArray
+        :param product_id: The product_id of this GetObjectsByProductIdResponseData.
+        :type product_id: str
+        """
+        self.swagger_types = {
+            'boxes': BoxesArray,
+            'product_id': str
+        }
+
+        self.attribute_map = {
+            'boxes': 'boxes',
+            'product_id': 'product_id'
+        }
+
+        self._boxes = boxes
+        self._product_id = product_id
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GetObjectsByProductIdResponseData':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The GetObjectsByProductIdResponse_data of this GetObjectsByProductIdResponseData.
+        :rtype: GetObjectsByProductIdResponseData
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def boxes(self) -> BoxesArray:
+        """
+        Gets the boxes of this GetObjectsByProductIdResponseData.
+
+        :return: The boxes of this GetObjectsByProductIdResponseData.
+        :rtype: BoxesArray
+        """
+        return self._boxes
+
+    @boxes.setter
+    def boxes(self, boxes: BoxesArray):
+        """
+        Sets the boxes of this GetObjectsByProductIdResponseData.
+
+        :param boxes: The boxes of this GetObjectsByProductIdResponseData.
+        :type boxes: BoxesArray
+        """
+
+        self._boxes = boxes
+
+    @property
+    def product_id(self) -> str:
+        """
+        Gets the product_id of this GetObjectsByProductIdResponseData.
+
+        :return: The product_id of this GetObjectsByProductIdResponseData.
+        :rtype: str
+        """
+        return self._product_id
+
+    @product_id.setter
+    def product_id(self, product_id: str):
+        """
+        Sets the product_id of this GetObjectsByProductIdResponseData.
+
+        :param product_id: The product_id of this GetObjectsByProductIdResponseData.
+        :type product_id: str
+        """
+
+        self._product_id = product_id
+
