# swagger_server/swagger/swagger.yaml
@@ -130,6 +130,18 @@ paths:
         description: "Image file to upload (only support jpg format yet)"
         required: false
         type: "file"
+      - name: "offset"
+        in: "query"
+        description: ""
+        required: false
+        type: "integer"
+        format: "int32"
+      - name: "limit"
+        in: "query"
+        description: ""
+        required: false
+        type: "integer"
+        format: "int32"
       responses:
         200:
           description: "successful operation"
@@ -243,7 +255,7 @@ paths:
         200:
           description: "successful operation"
           schema:
-            $ref: "#/definitions/GetObjectsResponse"
+            $ref: "#/definitions/GetObjectsByProductIdResponse"
         400:
           description: "Invalid input"
       x-swagger-router-controller: "swagger_server.controllers.object_controller"
@@ -356,6 +368,13 @@ definitions:
         type: "string"
       data:
         $ref: "#/definitions/GetObjectsResponse_data"
+  GetObjectsByProductIdResponse:
+    type: "object"
+    properties:
+      message:
+        type: "string"
+      data:
+        $ref: "#/definitions/GetObjectsByProductIdResponse_data"
   SearchImageResponse:
     type: "object"
     properties:
@@ -379,6 +398,12 @@ definitions:
       boxes:
         $ref: "#/definitions/BoxesArray"
       image_id:
+        type: "string"
+  GetObjectsByProductIdResponse_data:
+    properties:
+      boxes:
+        $ref: "#/definitions/BoxesArray"
+      product_id:
         type: "string"
 externalDocs:
   description: "Find out more about BlueLens"
